--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "newfeed.ai",
+  "name": "react-complete-guide",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "build": "rimraf dist && webpack --config webpack.prod.config.js --progress --profile --color"
+    "build": "rimraf dist && webpack --config webpack.config.js --mode production --progress --profile --color"
   },
   "author": "",
   "license": "ISC",
@@ -21,16 +21,18 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.4",
     "postcss-loader": "^2.0.7",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-router-dom": "^4.3.1"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2"
   }
 }
