--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   },
   "dependencies": {
     "react": "^16.0.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "reactstrap": "^6.5.0"
   }
 }
